--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
 }
 
 .background{
-    background: rgba(0,0,0,0.7) url('../img/bg.jpg');
+    background: rgba(0,0,0,0.7) url('../img/bg-min.jpg');
     background-size: cover;
     background-blend-mode: darken;
 }
@@ -135,7 +135,7 @@
 
 .foot{
     display: flex;
-    background: rgba(0,0,0,0.7) url('../img/bg.jpg');
+    background: rgba(0,0,0,0.7) url('../img/bg-min.jpg');
     background-size: cover;
     background-blend-mode: darken;
     justify-content: center;
