--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
 }
 
 .background{
-    background: #5f7e46);
+    background: #5f7e46;
     background-size: cover;
     background-blend-mode: darken;
 }
