--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,7 @@
     color: black;
     font-family: 'Roboto Slab', serif;
     font-size: 20px;
+    font-weight: bold;
     cursor: pointer;
 }
 
