--- a/css/style.css
+++ b/css/style.css
@@ -192,7 +192,7 @@
         padding: 20px;
     }
     .profile img{
-        border: 2px black solid;
+        border: 2px white solid;
         width: 15%;
     }
     
